infrastructure/localstack/localstack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localstack-ingress
  namespace: localstack
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: localstack.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: localstack-aws 
            port:
              number: 4566
  - host: "*.localstack.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: localstack-aws
            port:
              number: 4566
